完成字体调整

--- a/config/settings.ini
+++ b/config/settings.ini
@@ -1,39 +1,84 @@
 [DISPLAY]
-# 字体类型，用于计时器显示的字体
+# 字体类型，用于计时器显示的字体。
+# 示例：Helvetica、Arial、Times New Roman 等。
 font_family = Helvetica
 
-# 字体大小，以像素为单位
-font_size = 300                  
+# 字体大小，以像素为单位。这个大小决定了计时器数字的显示大小。
+# 设置较大值会让数字在窗口中显示得更大。
+font_size = 50              
 
-# 字体粗细 (normal 或 bold)
+# 字体粗细。可以是 'normal' 或 'bold'。
+# 'bold' 会使字体加粗，增加可读性。
 font_weight = bold               
 
-# 字体颜色，用于显示数字
+# 字体颜色，用于显示计时器数字。
+# 可设置为标准颜色名称（如 'white', 'black'）或颜色代码（如 '#FFFFFF'）。
 foreground_color = white         
 
-# 背景颜色，用于显示的背景
+# 背景颜色，用于计时器显示的背景。
+# 可设置为标准颜色名称或颜色代码。
 background_color = black         
+
+# 按钮的字体大小，以像素为单位。
+# 这个大小决定了按钮上文字的大小。调整为与按钮大小成比例。
+button_font_size = 100
 
 
 [TIMER]
-# 计时器的初始分钟数
+# 计时器的初始分钟数。
+# 例如设置为 5 表示计时器从 5 分钟开始计时。
 minutes = 5                      
 
-# 计时器的初始秒数
+# 计时器的初始秒数。
+# 例如设置为 30 表示计时器从 30 秒开始计时。
 seconds = 30                     
-
-# 自动组合minutes和seconds为初始时间 (格式为 MM:SS)
-initial_time = {minutes:02}:{seconds:02}  
 
 
 [AUDIO]
-# 警报声音文件路径
+# 警报声音文件路径。
+# 当计时器结束时，将播放此路径下的音频文件。
 alert_sound = assets/alert.wav   
 
 
 [WINDOW]
-# 窗口宽度
+# 窗口的初始宽度，以像素为单位。
+# 例如，设置为 800 表示窗口初始宽度为 800 像素。
 width = 800                      
 
-# 窗口高度
+# 窗口的初始高度，以像素为单位。
+# 例如，设置为 600 表示窗口初始高度为 600 像素。
 height = 600                     
+
+
+[LAYOUT]
+# 显示标签(Label)的位置和大小配置。
+# 'lbl_relx' 为水平方向上的相对位置（0.5 表示居中）。
+lbl_relx = 0.5       
+
+# 'lbl_rely' 为垂直方向上的相对位置（0.35 表示在窗口的 35% 位置）。
+lbl_rely = 0.35       
+
+# 按钮的位置和大小配置。
+# 'start_btn_relx', 'stop_btn_relx', 'reset_btn_relx' 分别表示 Start、Stop 和 Reset 按钮的水平相对位置。
+start_btn_relx = 0.1    
+stop_btn_relx = 0.4   
+reset_btn_relx = 0.7    
+
+# 按钮的垂直相对位置。'btn_rely' 表示按钮相对于窗口顶部的位置。
+btn_rely = 0.75          
+
+# 按钮的相对宽度。'btn_relwidth' 表示按钮相对于窗口宽度的比例。
+# 宽度设置为 0.2，按钮将变得更宽。
+btn_relwidth = 0.3  
+
+# 按钮的相对高度。'btn_relheight' 表示按钮相对于窗口高度的比例。
+# 高度设置为 0.15，按钮将变得更高。
+btn_relheight = 0.2     
+
+# 字体调整的因子和最小字体大小。
+# 'font_resize_factor' 用于计算在窗口调整时的字体大小。
+font_resize_factor = 100   
+
+# 'min_font_size' 用于确保字体不会因窗口过小而变得难以辨认。
+min_font_size = 75         
+ 
